--- a/node/canvas-rectangle-node.html
+++ b/node/canvas-rectangle-node.html
@@ -8,7 +8,7 @@
         inputs:1,
         outputs:1,
 		paletteLabel: "canvas rectangle",
-        icon: "file.png",
+      //  icon: "file.png",
         label: function() {
             return this.name||"canvas-rectangle-node";
         }
