added some parameter as offsets and dimension

--- a/node/canvas-rectangle-node.html
+++ b/node/canvas-rectangle-node.html
@@ -1,19 +1,38 @@
 <script type="text/javascript">
-    RED.nodes.registerType('canvas-rectangle-node',{
+    RED.nodes.registerType('canvas-rectangle-node', {
         category: 'canvas',
         color: '#5499C7',
         defaults: {
-            name: {value:""},
-            imagePath: {value:""},
-        },
-        inputs:1,
-        outputs:1,
-		paletteLabel: "canvas rectangle",
-      //  icon: "file.png",
-        label: function() {
-            return this.name||"canvas-rectangle-node";
-        }
-    });
+            name: { value: "" },
+            imagePath: {
+                value: "",
+                required: true
+            },
+            width: {
+                value: 0, 
+                validate: RED.validators.number()
+            },
+            height: {
+                value: 0, 
+                validate: RED.validators.number()
+            },
+            offset_x: {
+                value: 0, 
+                validate: RED.validators.number()
+            },
+            offset_y: {
+                value: 0, 
+                validate: RED.validators.number()
+            },
+            title: { value: "" },
+            inputs: 1,
+            outputs: 1,
+            paletteLabel: "canvas rectangle",
+            //  icon: "file.png",
+            label: function () {
+                return this.name || "canvas-rectangle-node";
+            }
+        });
 </script>
 
 <script type="text/html" data-template-name="canvas-rectangle-node">
@@ -22,11 +41,43 @@
         <input type="text" id="node-input-name" placeholder="Name">
     </div>
     <div class="form-row">
-        <label for="node-input-imagePath"><i class="fa fa-globe"></i> Image Path</label>
-        <input type="text" id="node-input-imagePath" placeholder="e.g. /home/pi/image.png">
+        <label for="node-input-imagePath"><i class="fa fa-file-image-o"></i>Image Path</label>
+        <input type="text" id="node-input-imagePath" placeholder="/home/pi/image.png">
+    </div>
+    <div class="form-row">
+        <label for="node-input-title"><i class="fa fa-file-image-o"></i>Title</label>
+        <input type="text" id="node-input-title" placeholder="rectancle title">
+    </div>
+    <div class="form-row">
+        <label for="node-input-offset_x"><i class="fa fa-plus-square-o"></i>Offset X</label>
+        <input type="number" id="node-input-offset_x" >
+    </div>
+    <div class="form-row">
+        <label for="node-input-offset_y"><i class="fa fa-plus-square-o"></i>Offset Y</label>
+        <input type="number" id="node-input-offset_y" >
+    </div>
+    <div class="form-row">
+        <label for="node-input-width"><i class="fa fa-plus-square-o"></i>Width</label>
+        <input type="number" id="node-input-width" >
+    </div>
+    <div class="form-row">
+        <label for="node-input-height"><i class="fa fa-plus-square-o"></i>Height</label>
+        <input type="number" id="node-input-height" >
     </div>
 </script>
 
 <script type="text/html" data-help-name="canvas-rectangle-node">
     <p>A simple node that add rectangle(s) over the input image</p>
+    <h3>Inputs</h3>
+    <dl class="message-properties">
+    <dt>payload
+        <span class="property-type">string | buffer</span>
+    </dt>
+    <h3>Outputs</h3>
+       <dl class="message-properties">
+       <dt>payload
+           <span class="property-type">string | buffer</span>
+       </dt>
+   <h3>Details</h3>
+   <p>Some more information about the node.</p>
 </script>
