--- a/node/canvas-rectangle-node.html
+++ b/node/canvas-rectangle-node.html
@@ -10,26 +10,26 @@
             },
             width: {
                 value: 0,
-                validate: RED.validators.number()
+                validate: function (v) { return !v || v >= 0 }
             },
             height: {
                 value: 0,
-                validate: RED.validators.number()
+                validate: function (v) { return !v || v >= 0 }
             },
             offset_x: {
                 value: 0,
-                validate: RED.validators.number()
+                validate: function (v) { return !v || v >= 0 }
             },
             offset_y: {
                 value: 0,
-                validate: RED.validators.number()
+                validate: function (v) { return !v || v >= 0 }
             },
             title: { value: "" },
         },
         inputs: 1,
         outputs: 1,
         paletteLabel: "canvas rectangle",
-        //  icon: "file.png",
+        icon: "font-awesome/fa-picture-o",
         label: function () {
             return this.name || "canvas-rectangle-node";
         }
